k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote-ui
  name: pipelines-vote-ui
  namespace: pipelines-tutorial
  #namespace: vote-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote-ui
  template:
    metadata:
      labels:
        app: vote-ui
        date: 27-11-2024
        foo: gitops
    spec:
      containers:
        #- image: quay.io/openshift-pipeline/vote-ui:latest
        - image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/pipelines-vote-ui
          imagePullPolicy: Always
          name: vote-ui
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 9090
              protocol: TCP
