k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote-ui
  name: vote-ui
  namespace: pipelines-tutorial
  #namespace: vote-example
spec:
  type: NodePort
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: vote-ui
