k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-example-ingress
  namespace: vote-example
spec:
  ingressClassName: nginx
  rules:
  - host: REPLACE_ME
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: vote-ui
            port:
              number: 8080
