k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vote-ui
  name: vote-ui
  namespace: pipelines-tutorial
  #namespace: vote-frontend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: vote-ui
    weight: 100
